fix centering issue on mobile

--- a/src/components/PomoForm.less
+++ b/src/components/PomoForm.less
@@ -5,6 +5,7 @@
   border: 2px solid #ddd;
   border-radius: 4px;
   width: 280px;
+  margin: 0 auto;
 
   @media screen and (min-width: 768px) {
     width: auto;
